--- a/IT17110280/.project
+++ b/IT17110280/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>PAFIT</name>
+	<name>IT17110280</name>
 	<comment></comment>
 	<projects>
 	</projects>
